# lab_tools

./: .gitignore  README.md  update.sh
annotation/: README.rst  pyproject.toml
annotation/annotation/: __init__.py  cli.py  constants.py  convert.py  core.py  ij_coding.py  types.py  utils.py
annotation/tests/: test_annotation.py
bart/: README.rst  pyproject.toml
bart/bart/: __main__.py  core.py  helpers.py
common/: pyproject.toml
common/common/: types.py  utils.py
common/common/utils/: __init__.py  experiments.py  imaging.py  legacy.py  makeconfig.py
flatfield/: README.rst  pyproject.toml
flatfield/flatfield/: __main__.py  core.py
hdf5ify/: pyproject.toml
hdf5ify/hdf5ify/: __main__.py  core.py
ij_scripts/: flatfield.py
improc/: README.rst  pyproject.toml
improc/improc/: flatfield.py  flatfield_cli.py  stitching.py
improc/improc/survival/: annotate.py  output.py  survival_analysis.py  types.py  utils.py
improc/tests/: test_improc.py
masa/: pyproject.toml
masa/masa/: __main__.py  core.py  deploy_masa.py  util.py
masa/tests/: test_masa.py
notebooks/: README.rst  nbkgen.sh  pyproject.toml
notebooks/notebooks/: cell_counter.ipynb  experiment_chooser.ipynb  flatfielding_stitcher.ipynb  survival.ipynb
scripts/: cleanup.sh  gloop.sh  setup.sh  space2_.sh
scripts/bash/: cleanup.sh  compress.sh  space2_.sh
