[tool.poetry]
name = "annotation"
version = "0.1.0"
description = ""
authors = ["Kerowak <boiwaq@gmail.com>"]

[tool.poetry.scripts]
anno = "annotation.cli:main"

[tool.poetry.dependencies]
python = "^3.9.9"
numpy = "^1.22.3"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
