[tool.poetry]
name = "flatfield"
version = "1.1.1"
description = ""
authors = ["Jacob Waksmacki <jwaksmac@med.umich.edu>"]

[tool.poetry.scripts]
flatfield = "flatfield.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
