[tool.poetry]
name = "improc"
version = "0.1.0"
description = ""
authors = ["kerowak <boiwaq@gmail.com>"]

[tool.poetry.scripts]
flatfield = "improc.flatfield_cli:main"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.2"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
tifffile = "^2022.4.8"
common = "" # this is necessary for including common in improc's build outputs
opencv-python = "^4.6.0"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.1"
multiprocess = "^0.70.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
common = {path = "../common", develop = true}
annotation = {path = "../annotation", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
