[tool.poetry]
name = "masa"
version = "1.0.2"
description = ""
authors = ["Jacob Waksmacki <jwaksmac@med.umich.edu>"]

[tool.poetry.scripts]
masa = 'masa.__main__:main'

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.0"
Pillow = "^9.0.0"
klein = "^21.8.0"
pandas = "^1.3.5"
PyYAML = "^6.0"
scikit-image = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
