[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["kerowak <boiwaq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jupyterlab = "^3.3.3"
ipywidgets = "^7.7.0"
scikit-image = "^0.19.2"
ipyfilechooser = "^0.6.0"
m2stitch = "^0.6.0"
common = {path = "../common", develop=true}
improc = {path = "../improc", develop=true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
